# CodeKata_Cpp_SmartPointers

./: CMakeLists.txt  Readme.md
AwefulApi/: AwefulAPI.cpp  AwefulAPI.h
src/: Galaxy.cpp  Galaxy.h  Ship.cpp  Ship.h  System.cpp  System.h
tests/: main.cpp
